@@ -1,3 +1,9 @@
+drkns 15.10.2016 14:32:31 +0200 - build 4826
+
+1. С форума: иногда при уменьшении размеров консоли во внутренний буфер попадал мусор.
+
+2. Всякие прочие мелочи на эту же тему. Если что-нибудь где-нибудь отвалится - пишите.
+
 zg 15.10.2016 03:59:22 +0200 - build 4825
 
 1. уточнение 4808.1.
